@@ -1,5 +1,15 @@
 <?
+
+// ldap_host
+// URL, hostname or IP
+// for SSL use the ldaps://hostname/ syntax
 //$ldap_host = "1.2.3.4";
+
+// ldap_port
+// default port is 389
+// default port for SSL is 636
+//$ldap_port = "389";
+
 //$ldap_bind_dn = "CN=packetfence,CN=Users,DC=example,DC=com";
 //$ldap_bind_pwd = "password";
 //$ldap_user_base = "OU=Techs,OU=Board Office,DC=example,DC=com";
